--- a/TSD/TSD.ipynb
+++ b/TSD/TSD.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -16,6 +16,204 @@
       "needs_background": "light"
      },
      "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "     Pasageri\n",
+      "0         NaN\n",
+      "1         NaN\n",
+      "2         NaN\n",
+      "3         NaN\n",
+      "4         NaN\n",
+      "5         NaN\n",
+      "6    0.962589\n",
+      "7    0.986821\n",
+      "8    1.011533\n",
+      "9    0.969603\n",
+      "10   0.967528\n",
+      "11   0.918545\n",
+      "12   0.940065\n",
+      "13   0.937550\n",
+      "14   1.196966\n",
+      "15   1.228030\n",
+      "16   0.916798\n",
+      "17   0.867360\n",
+      "18   1.102298\n",
+      "19   0.789065\n",
+      "20   0.839394\n",
+      "21   1.161016\n",
+      "22   1.095045\n",
+      "23   0.937680\n",
+      "24   1.144759\n",
+      "25   1.137923\n",
+      "26   0.875541\n",
+      "27   0.990413\n",
+      "28   0.948510\n",
+      "29   1.013259\n",
+      "..        ...\n",
+      "87   1.002605\n",
+      "88   1.031007\n",
+      "89   1.021059\n",
+      "90   1.002139\n",
+      "91   1.007333\n",
+      "92   1.041917\n",
+      "93   1.004818\n",
+      "94   0.969740\n",
+      "95   0.939342\n",
+      "96   0.945027\n",
+      "97   0.979079\n",
+      "98   1.026176\n",
+      "99   0.944909\n",
+      "100  1.066235\n",
+      "101  1.033442\n",
+      "102  0.991179\n",
+      "103  0.986692\n",
+      "104  1.031405\n",
+      "105  0.997417\n",
+      "106  1.017989\n",
+      "107  0.970455\n",
+      "108  0.925142\n",
+      "109  1.007518\n",
+      "110  0.975095\n",
+      "111       NaN\n",
+      "112       NaN\n",
+      "113       NaN\n",
+      "114       NaN\n",
+      "115       NaN\n",
+      "116       NaN\n",
+      "\n",
+      "[117 rows x 1 columns]\n",
+      "     Pasageri\n",
+      "0    0.858497\n",
+      "1    0.715318\n",
+      "2    0.851220\n",
+      "3    0.999145\n",
+      "4    1.015520\n",
+      "5    1.110052\n",
+      "6    1.270668\n",
+      "7    1.293347\n",
+      "8    1.154253\n",
+      "9    1.001361\n",
+      "10   0.841370\n",
+      "11   0.889248\n",
+      "12   0.858497\n",
+      "13   0.715318\n",
+      "14   0.851220\n",
+      "15   0.999145\n",
+      "16   1.015520\n",
+      "17   1.110052\n",
+      "18   1.270668\n",
+      "19   1.293347\n",
+      "20   1.154253\n",
+      "21   1.001361\n",
+      "22   0.841370\n",
+      "23   0.889248\n",
+      "24   0.858497\n",
+      "25   0.715318\n",
+      "26   0.851220\n",
+      "27   0.999145\n",
+      "28   1.015520\n",
+      "29   1.110052\n",
+      "..        ...\n",
+      "87   0.999145\n",
+      "88   1.015520\n",
+      "89   1.110052\n",
+      "90   1.270668\n",
+      "91   1.293347\n",
+      "92   1.154253\n",
+      "93   1.001361\n",
+      "94   0.841370\n",
+      "95   0.889248\n",
+      "96   0.858497\n",
+      "97   0.715318\n",
+      "98   0.851220\n",
+      "99   0.999145\n",
+      "100  1.015520\n",
+      "101  1.110052\n",
+      "102  1.270668\n",
+      "103  1.293347\n",
+      "104  1.154253\n",
+      "105  1.001361\n",
+      "106  0.841370\n",
+      "107  0.889248\n",
+      "108  0.858497\n",
+      "109  0.715318\n",
+      "110  0.851220\n",
+      "111  0.999145\n",
+      "112  1.015520\n",
+      "113  1.110052\n",
+      "114  1.270668\n",
+      "115  1.293347\n",
+      "116  1.154253\n",
+      "\n",
+      "[117 rows x 1 columns]\n",
+      "          Pasageri\n",
+      "0              NaN\n",
+      "1              NaN\n",
+      "2              NaN\n",
+      "3              NaN\n",
+      "4              NaN\n",
+      "5              NaN\n",
+      "6    304646.666667\n",
+      "7    307906.708333\n",
+      "8    314573.500000\n",
+      "9    327909.750000\n",
+      "10   338270.500000\n",
+      "11   342852.458333\n",
+      "12   354066.958333\n",
+      "13   365161.041667\n",
+      "14   369903.875000\n",
+      "15   380958.833333\n",
+      "16   395521.458333\n",
+      "17   406493.333333\n",
+      "18   419599.416667\n",
+      "19   435211.791667\n",
+      "20   443759.166667\n",
+      "21   448163.291667\n",
+      "22   458261.458333\n",
+      "23   475548.750000\n",
+      "24   492294.250000\n",
+      "25   517858.875000\n",
+      "26   543950.125000\n",
+      "27   550364.458333\n",
+      "28   553765.416667\n",
+      "29   569991.708333\n",
+      "..             ...\n",
+      "87   815591.333333\n",
+      "88   813718.750000\n",
+      "89   812444.291667\n",
+      "90   812064.500000\n",
+      "91   813444.000000\n",
+      "92   815934.250000\n",
+      "93   815779.958333\n",
+      "94   816524.583333\n",
+      "95   820424.041667\n",
+      "96   823341.583333\n",
+      "97   825342.208333\n",
+      "98   827426.291667\n",
+      "99   829991.541667\n",
+      "100  834203.833333\n",
+      "101  839578.541667\n",
+      "102  843058.583333\n",
+      "103  846359.500000\n",
+      "104  849221.333333\n",
+      "105  853709.000000\n",
+      "106  858685.416667\n",
+      "107  863340.958333\n",
+      "108  870986.625000\n",
+      "109  878966.041667\n",
+      "110  886732.875000\n",
+      "111            NaN\n",
+      "112            NaN\n",
+      "113            NaN\n",
+      "114            NaN\n",
+      "115            NaN\n",
+      "116            NaN\n",
+      "\n",
+      "[117 rows x 1 columns]\n"
+     ]
     },
     {
      "data": {
@@ -32,15 +230,27 @@
    ],
    "source": [
     "import pandas as pd\n",
-    "from matplotlib import pyplot\n",
+    "import matplotlib.pyplot as plt\n",
     "series = pd.read_csv('D:\\CURSURI\\SERII DE TIMP\\passengers_RO.csv', header=0)\n",
     "yt=pd.DataFrame(series[\"Pasageri\"])\n",
+    "\n",
+    "\n",
+    "\n",
     "yt.plot()\n",
     "pyplot.show()\n",
+    "\n",
     "from statsmodels.tsa.seasonal import seasonal_decompose\n",
     "result = seasonal_decompose(yt, freq=12, model='multiplicative')\n",
+    "print(result.resid)\n",
+    "print(result.seasonal)\n",
+    "print(result.trend)\n",
+    "\n",
     "result.plot()\n",
-    "pyplot.show()"
+    "plt.show()\n",
+    "plt.close()\n",
+    "\n",
+    "\n",
+    "\n"
    ]
   },
   {
